# app

./: .gitignore  README.md  bun.lockb  components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/application/commands/: change_discord_presence.rs
src-tauri/src/core/config/: database.rs  mod.rs
src-tauri/src/infrastructure/discord/: discord_state.rs  mod.rs
src-tauri/src/presentation/rpc/: discord.rs
src-tauri/src/rpc/: discord.rs
src/app/: core.tsx  main.tsx
src/app/providers/: index.ts  with-theme.tsx
src/app/router/: index.tsx
src/app/styles/: global.css
src/pages/favorites/ui/: favorites.tsx
src/pages/home/ui/: home.tsx
src/pages/settings/ui/: settings.tsx
src/shared/api/imdb/: client.ts  index.ts
src/shared/lib/: slot.tsx
src/shared/lib/disclosure/: index.ts
src/shared/router/: paths.ts
src/shared/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  container.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  icon-button.tsx  input-otp.tsx  input.tsx  label.tsx  link.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  slider.tsx  switch.tsx  table.tsx  (+7 more)
(+16 files in other folders)
